# ghminer

./: .coveragerc  .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/source/: CHANGELOG.rst  conf.py  index.rst
docs/source/modules/: index.rst
src/: commit-miner.py  credential.ini.tpl  golang-miner.py  identify-repos.py  retrieve-commits.py
src/ghminer/: __init__.py  version.py
src/ghminer/golang/: __init__.py  gomod.py  nameconv.py
src/ghminer/parser/: __init__.py  commit.py  gephi.py  gomod.py  parquet.py  xref.py
src/ghminer/retriever/: __init__.py  comment.py  commit.py  repository.py  star.py
src/ghminer/tests/parser/: __init__.py
src/ghminer/utils/: __init__.py  common.py
tests/golang/parser/: test_gomod.py
tests/parser/: test_gomod.py
